--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm currently in my fourth year at Waterloo. I've discovered that I enjoy software development as it is an exciting field of work. I've recently taken an interest in fields like distributed computing and artifical intelligence, which I'm exploring through my chosen courses so that I can have a solid foundation in them. I've gained lots of experience with developing solutions using the full stack - !using a database with the back-end and front-end!. Besides development, I like rollerblading, traveling, and ping pong.
+            <p>I'm currently in my fourth year at Waterloo. I've discovered that I enjoy software development as it is an exciting field of work. I've recently taken an interest in fields like distributed computing and artifical intelligence, which I'm exploring through my chosen courses so that I can have a solid foundation in them. I've gained lots of experience with developing solutions using the full stack, specifically a database with the back-end and front-end. In my spare time, I like working on my projects, going out to rollerblade, traveling, and play some ping pong.
             </p>
 
             <div class="row">
