--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                   <p>
                   	<ul>
-                  		<li>Developed undergraduate offer system from the ground up that displays dynamic web, utilizing Drupal hooks in the back-end, and designed front-end experience</li>
+                  		<li>Developed undergraduate offer system from the ground up that displays dynamic web content, utilizing Drupal hooks in the back-end, and designed front-end experience</li>
                   		<li>Built back-end search functionality that interacts with database to retrieve and display programs, ordered by number of hits</li>
                   		<li>Mentored a peer through pair-programming</li>
                   		<li>Documented the vast majority of the code base the team maintains</li>
