--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h3>Hi! Welcome to my website. I'm currently a student at the University of Waterloo studying Computer Engineering. Studying my program has helped me realize how much I enjoy being a developer and solving problems. My favorite part has been learning new concepts and techniques that I can apply to my work. Thanks for visiting, feel free to drop me a message!</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+               <li><a target="_blank" href="https://www.linkedin.com/in/zak-devins/"><i class="fab fa-linkedin"></i></a></li>
             </ul>
       </div>
 
@@ -538,61 +538,15 @@
 
             <div class="ten columns">
 
-                  <p class="lead">If you have any questions or you simply want to get in touch, feel free to leave me a message by emailing me below.
+                  <p class="lead">If you have any questions or you simply want to get in touch, feel free to leave me a message by emailing me.
                   </p>
+
+                  <p><b>Email:</b> <b style="color: white">zdevins@edu.uwaterloo.ca</b>
 
             </div>
 
          </div>
 
-         <div class="row">
-
-            <div class="eight columns">
-
-               <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
-					<fieldset>
-
-                  <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactName" name="contactName">
-                  </div>
-
-                  <div>
-						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
-                  </div>
-
-                  <div>
-						   <label for="contactSubject">Subject</label>
-						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
-                  </div>
-
-                  <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
-                  </div>
-
-					</fieldset>
-				   </form> <!-- Form End -->
-
-               <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
-               <!-- contact-success -->
-				   <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-				   </div>
-
-            </div>
-
-      </div>
 
    </section> <!-- Contact Section End-->
 
@@ -606,7 +560,7 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+               <li><a target="_blank" href="https://www.linkedin.com/in/zak-devins/"><i class="fab fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
