--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h3>Hi! Welcome to my website. I'm currently a student at the University of Waterloo studying Computer Engineering. Studying my program has helped me realize how much I enjoy being a developer and solving problems. My favorite part has been learning new concepts and techniques that I can apply to my work. Thanks for visiting, feel free to drop me a message!</h3>
             <hr />
             <ul class="social">
-               <li><a target="_blank" href="https://www.linkedin.com/in/zak-devins/"><i class="fab fa-linkedin"></i></a></li>
+               <li><a target="_blank" href="https://www.linkedin.com/in/zakdevins/"><i class="fab fa-linkedin"></i></a></li>
             </ul>
       </div>
 
@@ -99,7 +99,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm currently in my fourth year at Waterloo. I've discovered that I enjoy software development as it is an exciting field of work. I've recently taken an interest in fields like distributed computing and artifical intelligence, which I'm exploring through my chosen courses so that I can have a solid foundation in them. I've gained lots of experience with developing solutions using the full stack, specifically a database with the back-end and front-end. In my spare time, I like working on my projects, going out to rollerblade, traveling, and play some ping pong.
+            <p>I'm currently in my fourth year at Waterloo. I've discovered that I enjoy software development as it is an exciting field of work. I've recently taken an interest in fields like distributed computing and artifical intelligence, which I'm exploring through my chosen courses so that I can have a solid foundation in them. I've gained lots of experience with developing solutions using the full stack, specifically a database with the back-end and front-end. In my spare time, I like working on my projects, going out to rollerblade, traveling, and playing some ping pong.
             </p>
 
             <div class="row">
@@ -560,7 +560,7 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a target="_blank" href="https://www.linkedin.com/in/zak-devins/"><i class="fab fa-linkedin"></i></a></li>
+               <li><a target="_blank" href="https://www.linkedin.com/in/zakdevins/"><i class="fab fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
