--- a/index.html
+++ b/index.html
@@ -89,13 +89,10 @@
 
       <div class="row">
 
-         <div class="three columns">
-
+         <!--<div class="three columns">
             <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
-
-         </div>
-
-         <div class="nine columns main-col">
+         </div>-->
+         <div class="columns main-col">
 
             <h2>About Me</h2>
 
